# Play_Ground

./: .gitignore  CMakeLists.txt  README.md  blur_params_v23a.yml  dfd_input_laptop.txt  dfd_input_laptop.yml  dfd_rw_input_laptop.txt  dfd_test_data_one2.txt  dfd_test_data_sm2.txt  dfd_train_data_one2.txt  dfd_train_data_sm2.txt  pam_test2.m  poly_example.txt
PIC/firmware/led_4x4.X/: .mc3  led_4x4.mc3
PIC/firmware/led_4x4.X/nbproject/: Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-test2.mk  Makefile-test2.mk  Makefile-variables.mk  configurations.xml  project.xml
PIC/firmware/led_4x4.X/nbproject/private/: configurations.xml  private.xml
PIC/firmware/src/: main.c
PIC/firmware/src/config/test2/: definitions.h  harmony-manifest-success.yml  initialization.c  interrupts.c
PIC/firmware/src/config/test2/peripheral/clk/: plib_clk.c
PIC/firmware/src/config/test2/peripheral/evic/: plib_evic.c
PIC/firmware/src/config/test2/peripheral/gpio/: plib_gpio.c  plib_gpio.h
PIC/firmware/src/config/test2/peripheral/tmr/: plib_tmr2.c
PIC/firmware/src/config/test2/peripheral/uart/: plib_uart1.c
PIC/firmware/src/config/test2/test2.mhc/: settings.yml
PIC/led_pulser.X/: PIC16F1823_Config.c  PIC16F1823_Config.h  main.c
PIC/nano_spi_test.X/: mcc-manifest-autosave.yml  mcc-manifest-generated-success.yml  nano_spi_test.mc3
PIC/nano_spi_test.X/nbproject/: configurations.xml  project.xml
PIC/pwm_tester.X/include/: PIC12F1822_Config.h
PIC/pwm_tester.X/nbproject/: configurations.xml  project.xml
PIC/pwm_tester.X/src/: PIC12F1822_Config.c  pwm_tester.c
PIC/src/: main.c
PIC/src/config/default/: pin_configurations.csv
docs/: Doxyfile
include/: dfd_net_v14_pso_01.h  load_dfd_rw_data.h  nn_car_particle.h  pg.h  pso_particle.h
mini_pg/: CMakeLists.txt  qpsk_test.m
mini_pg/include/: test_gen.h
mini_pg/src/: mini_pg.cpp
py_src/: bokeh_js_test.py  bokeh_test.py  box_select_test.html  box_select_test.py  cv_test.py  js_on_change.html  test1.py  test2.py
src/: pg_v1.cpp  pg_v2.cpp  pg_v3.cpp
src/old/: cam_test_main_v1.cpp  pg_v1.cpp  pg_v2.cpp
temp/: CMakeLists.txt  main.cpp  spectromat.cpp  spectromat.h
